--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,30 @@
+html,body {
+    margin:0;
+    padding:0;
+}
+
+.header{
+    background-color: #1F2937;
+    width: 100%;
+    padding:auto;
+}
 
 .menu{
     display: flex;
-    padding: 15px;
+    padding: 30px;
+    color: white;
+    margin: 0%;
+    overflow: auto;
+    font-family: "Trirong", serif;
+
+}
+
+body {
+    font-family: "Trirong", serif;
+  }
+
+h1{
+    margin:0px;
 }
 
 
@@ -12,22 +35,24 @@ ul {
     position:absolute; 
     right:80px;
     float:right;
-    gap: 15px;
+    gap: 25px;
 }
 
 a{
     text-decoration: none;
-    color: black;
+    color: white;
 }
 .main-text{
     display: flex;
-    padding-bottom: 50px;
+    padding: 0px;
     justify-content: center;
+    color: white;
 }
 
 .main-text .text{
-    float: center;
-    margin: 70px;
+    justify-content: center;
+    margin: 0px 0px 0px 70px;
+    padding: 30px;
 }
 
 .information{
@@ -42,6 +67,7 @@ a{
     margin: auto;
     width: 60%;
     padding: 10px;
+    gap: 10px;
 }
 
 .inspiring-quote
@@ -62,4 +88,39 @@ a{
     margin: auto;
     width: 60%;
     margin-left: 500px;
+}
+
+footer{
+    justify-content: center;
+    margin: auto;
+    width: 20%;
+    padding: 20px;
+}
+
+button {
+    background-color: blue;
+    border: none;
+    color: white;
+    padding: 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 6px 4px;
+    border-radius: 12px;
+}
+
+.box{
+    color: white;
+    border: 5px solid blue;
+    border-radius: 12px;
+    padding: 10px;
+    margin: 10px;
+}
+
+.inspiring-quote{
+    background-color: lightgrey;
+    width: 90%;
+    padding:95px;
+    margin: 0px;
 }
