--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ footer{
     color: white;
 }
 
-.button {
+.button{
     background-color: blue;
     border: none;
     color: white;
@@ -133,16 +133,12 @@ footer{
 }
 
 .call-to-action{
+    background-color: #3882F6;
+    margin: 50px 200px;
+    padding: 10px 80px;
     display: flex;
-    background-color: lightblue;
-    margin: 50px auto 50px;
-    padding-top: 5px;
-    padding-bottom: 1px;
-}
-
-.call-to-action .text .button-call-to-action{
-    margin-right: 10px;
-
+    align-items: center;
+    border-radius: 5px
 }
 
 .call-to-action .text{
@@ -150,4 +146,31 @@ footer{
     padding:5px;
     color: white;
     margin-bottom: 10px;
+}
+
+.button-call-to-action{
+    color: #fff;
+    font-family: 'Roboto', arial;
+    border-color: #fff;
+    border-radius: 8px;
+    background-color: #3882F6;
+    padding: 15px;
+    text-align: center;
+    
+    font-size: 16px;
+    float: left;
+    border-radius: 12px;
+}
+
+
+.call-to-action h3{
+    color: #fff;
+    font-family: 'Roboto', arial;
+    padding: 0;
+    margin: 30px 0px 0px 20px;
+}
+
+.call-to-action p {
+    display: block;
+    margin: 20px 0px 0px 20px;
 }
